<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PersonObject">

    <EditText
        android:id="@+id/etPerson1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_person_1"/>

    <EditText
        android:id="@+id/etPerson2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_person_2"/>

    <EditText
        android:id="@+id/etPerson3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_person_3"/>

    <EditText
        android:id="@+id/etPerson4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintperson_4"/>

    <EditText
        android:id="@+id/etPersonTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintperson_4"/>


    <Button
        android:id="@+id/btnMakeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_make_list"
        android:onClick="onClick"/>


</LinearLayout>