<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnActPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_pic" />

    <Button
        android:id="@+id/btnActCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_emi_calculator" />
    <Button
        android:id="@+id/btnActPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_person_info" />

    <TextView
        android:id="@+id/tvPersonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>